# nginx-cmake

./: .gitignore  CMakeLists.txt  README-EN.md  README.cmake.md  README.md  ngx_auto_config.h  ngx_modules.c
auto/: cmake
cmake/: CMakeLists.txt  auto_group_files.cmake
conf/: nginx.conf
src/: CMakeLists.txt
